[package]
name = "cita-secp256k1"
version = "0.1.1"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
description = "A library library provide secp256k1 cryptography method"
license = "Apache-2.0"
edition = "2018"

[dependencies]
secp256k1 = {version = "0.24", features = ["rand-std", "recovery"]}
lazy_static = "1.1"
rustc-serialize = "0.3"
cita-types = "0.1"
hashable = { package = "cita-hashable", version = "0.1" }
cita-crypto-trait = "0.1"
rlp = "0.5"
serde = "1.0"

[dev-dependencies]
bincode = "1.0"

[features]
default = []
sha3hash = ["hashable/sha3hash"]
blake2bhash = ["hashable/blake2bhash"]
sm3hash = ["hashable/sm3hash"]
